--- a/index.html
+++ b/index.html
@@ -1,90 +1,105 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <!-- VERY IMPORTANT -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Production System</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="app">
-
-    <h1>Production System</h1>
-
-    <!-- ROLE -->
-    <div id="roleSelect" class="card center">
-      <h3>Select Role</h3>
-      <button onclick="showSection('LineLeader')">Line Leader</button>
-      <button onclick="showSection('Manager')">Manager</button>
-    </div>
-
-    <!-- LINE LEADER -->
-    <div id="lineLeaderSection" class="card">
-      <h3>Daily Production Entry</h3>
-
-      <label>Line No</label>
-      <input id="line">
-
-      <label>Model</label>
-      <input id="model">
-
-      <label>Quantity</label>
-      <input id="qty" type="number">
-
-      <label>Reason</label>
-      <input id="reason">
-
-      <button onclick="saveProduction()">Save</button>
-      <p id="msg"></p>
-    </div>
-
-    <!-- MANAGER -->
-    <div id="managerSection" class="card">
-      <h3>Manager Dashboard</h3>
-
-      <label>Select Line</label>
-      <select id="filterLine">
-        <option value="">All Lines</option>
-        <option value="01">Line 01</option>
-        <option value="02">Line 02</option>
-        <option value="03">Line 03</option>
-        <option value="04">Line 04</option>
-        <option value="05">Line 05</option>
-        <option value="06">Line 06</option>
-        <option value="07">Line 07</option>
-        <option value="08">Line 08</option>
-      </select>
-
-      <label>Select Date</label>
-      <input type="date" id="filterDate">
-
-      <button onclick="filterByDate()">Filter</button>
-      <button class="clear" onclick="clearFilter()">Clear</button>
-
-      <p><b>Total Quantity:</b> <span id="totalQty">0</span></p>
-
-      <div class="table-wrap">
-        <table>
-          <thead>
-            <tr>
-              <th>Line</th>
-              <th>Model</th>
-              <th>Qty</th>
-              <th>Reason</th>
-              <th>Time</th>
-            </tr>
-          </thead>
-          <tbody id="tableBody"></tbody>
-        </table>
-      </div>
-    </div>
-
+<div class="app">
+  <h1>Production System</h1>
+  <!-- LOGIN -->
+  <div id="loginSection" class="card center">
+    <h3>Login</h3>
+    <input id="pin" type="password" placeholder="Enter PIN">
+    <button onclick="login()">Login</button>
+    <p id="loginMsg"></p>
   </div>
-
-  <script src="script.js"></script>
+  <!-- ROLE -->
+  <div id="roleSelect" class="card center">
+    <h3>Select Role</h3>
+    <button onclick="showSection('LineLeader')">Line Leader</button>
+    <button onclick="showSection('Manager')">Manager</button>
+  </div>
+  <!-- LINE LEADER -->
+  <div id="lineLeaderSection" class="card">
+    <h3>Daily Production Entry</h3>
+    <label>Line No</label>
+    <input id="line">
+    <label>Model</label>
+    <input id="model">
+    <label>Planned Qty</label>
+    <input id="plannedQty" type="number">
+    <label>Actual Qty</label>
+    <input id="qty" type="number">
+    <label>Reason for low planned production</label>
+    <input id="reason">
+    <label>Line Leader</label>
+    <select id="lineLeaderSelect">
+      <option value="">Select</option>
+      <option value="Sreekant">Sreekant</option>
+      <option value="Nithin">Nithin</option>
+      <option value="Jafar">Jafar</option>
+      <option value="Siva">Siva</option>
+      <option value="Teja">Teja</option>
+    </select>
+    <label>PQC Name</label>
+    <select id="pqcSelect">
+      <option value="">Select</option>
+      <option value="Nikhil">Nikhil</option>
+      <option value="Vinod">Vinod</option>
+      <option value="Yaseen">Yaseen</option>
+      <option value="Mynu">Mynu</option>
+    </select>
+    <button onclick="saveProduction()">Save</button>
+    <button class="clear" onclick="goBack()">Back</button>
+    <p id="msg"></p>
+  </div>
+  <!-- MANAGER -->
+  <div id="managerSection" class="card">
+    <h3>Manager Dashboard</h3>
+    <div class="manager-controls">
+      <label>Date</label>
+      <input type="date" id="filterDate">
+      <label>Filter Line</label>
+      <select id="filterLine">
+        <option value="">All</option>
+        <option value="01">01</option>
+        <option value="02">02</option>
+        <option value="03">03</option>
+        <option value="04">04</option>
+        <option value="05">05</option>
+        <option value="06">06</option>
+        <option value="07">07</option>
+        <option value="08">08</option>
+      </select>
+      <button onclick="filterData()">Filter</button>
+      <button onclick="exportCSV()">Export Excel</button>
+      <button class="clear" onclick="resetData()">Delete All</button>
+      <button class="clear" onclick="goBack()">Back</button>
+    </div>
+    <p><b>Total Quantity:</b> <span id="totalQty">0</span></p>
+    <div class="table-wrap">
+      <table>
+        <thead>
+          <tr>
+            <th>Line</th>
+            <th>Model</th>
+            <th>Planned Qty</th>
+            <th>Actual Qty</th>
+            <th>Reason</th>
+            <th>Line Leader</th>
+            <th>PQC Name</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
