--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <option value="Jafar">Jafar</option>
       <option value="Siva">Siva</option>
       <option value="Teja">Teja</option>
+      <option value="Rana">Rana</option>
     </select>
     <label>PQC Name</label>
     <select id="pqcSelect">
@@ -52,6 +53,7 @@
       <option value="Vinod">Vinod</option>
       <option value="Yaseen">Yaseen</option>
       <option value="Mynu">Mynu</option>
+      <option value="shubham">shubham</option>
     </select>
     <button onclick="saveProduction()">Save</button>
     <button class="clear" onclick="goBack()">Back</button>
