--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <input id="pin" type="password" placeholder="Enter PIN">
     <button onclick="login()">Login</button>
     <p id="loginMsg"></p>
+    <!-- PROFILE INTRO -->
+<div class="login-profile">
+  <img src="profile.jpg" alt="Sohail">
+  <p>
+    <b>Designed & Developed by Sohail</b><br>
+     Daily Production Tracking System<br>
+    my focus is on using technology to make work processes easier,faster,and better.
+  </p>
+</div>
+
   </div>
 
   <!-- ROLE -->
