--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="login-profile">
   <img src="profile.jpg" alt="Sohail">
   <p>
-    <b>Designed & Developed by Sohail</b><br>
+    <b>Designed & Developed by SOHAIL</b><br>
      Daily Production Tracking System<br>
   </p>
 </div>
